PA_Education/TestMenifest/force-app/main/default/objects/InternalTask__c/InternalTask__c.object-meta.xml
<CustomObject>
    <description>내부 component package등 생성 작업
- 23/10/11 김현진 생성</description>
    <label>내부 Task</label>
    <nameField>
        <label>과제명</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>