PA_Education/TestMenifest/force-app/main/default/objects/InternalTask__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>완료여부</label>
    <type>Checkbox</type>
</CustomField>