PA_Education/TestMenifest/force-app/main/default/objects/InternalTask__c/fields/Creator__c.field-meta.xml
<CustomField>
    <fullName>Creator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>기안자</label>
    <referenceTo>User</referenceTo>
    <relationshipName>InternalTask</relationshipName>
    <type>Lookup</type>
</CustomField>