PA_Education/TestMenifest/force-app/main/default/objects/InternalTask__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>종료일자</label>
    <type>Date</type>
</CustomField>