PA_Education/TestMenifest/force-app/main/default/objects/InternalTask__c/fields/ExpectedEndDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedEndDate__c</fullName>
    <label>종료 예정일자</label>
    <type>Date</type>
</CustomField>