PA_Education/TestMenifest/force-app/main/default/objects/InternalTask__c/fields/ManageNumber__c.field-meta.xml
<CustomField>
    <fullName>ManageNumber__c</fullName>
    <label>관리번호</label>
    <length>255</length>
    <type>Text</type>
</CustomField>