PA_Education/TestMenifest/force-app/main/default/objects/InternalTask__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ManageNumber__c</columns>
    <columns>Creator__c</columns>
    <columns>StartDate__c</columns>
    <columns>ExpectedEndDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Completed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>